--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "create-test-files": "bash scripts/create-test-files.sh",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -f ./src/config/database.config.ts",
-    "migration:generate": "npm run typeorm -- migration:generate -n",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert",
-    "migration:create": "npm run typeorm -- migration:create"
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate -d src/config/data-source.ts src/migrations/Migration",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/config/data-source.ts",
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/config/data-source.ts",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create src/migrations/Migration"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
