--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vacation-flow-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Backend API for VacationFlow - an employee vacation management system",
+  "author": "Aleix Martinez",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
